--- a/angular/src/app/pages/todo/todo.component.html
+++ b/angular/src/app/pages/todo/todo.component.html
@@ -31,6 +31,6 @@
             <div class="progressbar__fill">
             </div>
         </div>
-        <span>x %</span> 
+        <span>{{todoData.progress}}</span> 
     </section>           
 </div>
